<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/titulo_tela_linear"
        android:textSize="50px"
        android:textAlignment="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btn_primeiroButton"
        android:text="@string/imprimeMensagem"
        android:onClick="imprimeMensagem"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btn_segundoButton"
        android:text="@string/abir_tela_formulario"
        android:onClick="abreNovaTela"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btn_terceiroButton"
        android:text="@string/abir_tela"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/btn_quartoButton"
        android:text="@string/abir_tela"/>


</LinearLayout>